some functionality fixes

--- a/elearning/core/templates/core/send_message.html
+++ b/elearning/core/templates/core/send_message.html
@@ -1,14 +1,14 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Create Classroom{% endblock %}
+{% block title %}Send Message{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Create Classroom</h1>
+    <h1>Send Message</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Send</button>
     </form>
 </div>
 {% endblock %}
