--- a/elearning/core/templates/core/create_comment.html
+++ b/elearning/core/templates/core/create_comment.html
@@ -1,11 +1,11 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Create Assignment{% endblock %}
+{% block title %}Create Comment{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Create Assignment</h1>
-    <form method="post" enctype="multipart/form-data">
+    <h1>Create Comment</h1>
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Create</button>
