--- a/elearning/core/templates/core/create_quiz.html
+++ b/elearning/core/templates/core/create_quiz.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Quiz</title>
-</head>
-<body>
-    <h1>Create Quiz for {{ classroom.name }}</h1>
+
+{% extends 'core/base.html' %}
+
+{% block title %}Create Quiz{% endblock %}
+
+{% block content %}
+<div class="container">
+    <h1>Create Quiz</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Create</button>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
+
