--- a/elearning/core/templates/core/submit_assignment.html
+++ b/elearning/core/templates/core/submit_assignment.html
@@ -1,14 +1,14 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Create Assignment{% endblock %}
+{% block title %}Submit Assignment{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Create Assignment</h1>
+    <h1>Submit Assignment</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 {% endblock %}
