--- a/elearning/core/templates/core/base.html
+++ b/elearning/core/templates/core/base.html
@@ -1,26 +1,28 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <title>{% block title %}educationPortal{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}E-learning System{% endblock %}</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="{% static 'core/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'ele/base.css' %}" rel="stylesheet">
+    <link href="{% static 'core/ClassView.css' %}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/869e8d43b7.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">E-learning System</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                    </li>
-                {% endif %}
-            </ul>
+<body style="overflow: auto;">
+    <header class="mainHeader">
+        <div style="display: flex; align-items: center;" class="headerLogo">
+            <img src="{% static 'educationPortal/Icons/Logo.svg' %}" style="height: 7vh; margin-right: 20px; color: orange; margin-left: 20px;" class="logo">
+            <h4 class="title">E-Learning Portal</h4>
         </div>
-    </nav>
-    {% block content %}
+        <div class="headerItems">
+            <!-- Additional header items can be added here -->
+        </div>
+    </header>
+
+    {% block body %}
     {% endblock %}
 </body>
 </html>
