--- a/elearning/core/templates/core/login.html
+++ b/elearning/core/templates/core/login.html
@@ -2,20 +2,36 @@
 
 {% block title %}Login{% endblock %}
 
-{% block content %}
-<div class="container">
-    <h1>Login</h1>
-    <form method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username">
+{% block body %}
+    <h2>Login</h2>
+
+    <div class="inputForm">
+        <h1>Login</h1>
+        <br>
+        <form action="{% url 'login' %}" method="post" class="">
+            {% csrf_token %}
+            <div class="form-group" style="display: flex; height: 30px; align-items: center;">
+                <div class="loginIcon">
+                    <i class="fas fa-user"></i>
+                </div>
+                <input autofocus type="text" name="username" placeholder="Username" class="inputField">
+            </div>
+            <div class="form-group" style="display: flex; height: 30px; align-items: center;">
+                <div class="loginIcon">
+                    <i class="fas fa-lock"></i>
+                </div>
+                <input type="password" name="password" placeholder="Password" class="inputField">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Login">
+        </form>
+        <div style="height: 2vh;">
         </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password">
+        Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+        <div style="height: 3vh;">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-</div>
+        {% if message %}
+        <div style="color: white; margin-bottom: 20px;">{{ message }}</div>
+        <br>
+        {% endif %}
+    </div>
 {% endblock %}
